[package]
name = "todo_backend"
version = "0.1.0"
authors = ["Ismael <ismalfmp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0"
log = "0.4.0"
env_logger = "0.8.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.118"
serde_json = "1.0.60"

[dependencies.diesel]
version = "1.4.3"
default-features = false
features = ["r2d2", "mysql", "chrono"]